--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,11 @@
             <artifactId>joda-time</artifactId>
             <version>2.12.2</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>de.gurkenlabs</groupId>
+            <artifactId>litiengine</artifactId>
+            <version>0.5.2</version>
+        </dependency>
     </dependencies>
 
 </project>
